--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,8 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
+api_controllers:
+    resource: ../src/Controller/Api/
+    type: attribute
+    prefix: /api
+
+web_controllers:
+    resource: ../src/Controller/Web/
     type: attribute
